--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,30 +1,3 @@
-@article{birds-sounds-corpus,
-    title = "Automatic bird sound detection in long real-field recordings: Applications and tools",
-    journal = "Applied Acoustics",
-    volume = "80",
-    pages = "1 - 9",
-    year = "2014",
-    issn = "0003-682X",
-    doi = "https://doi.org/10.1016/j.apacoust.2014.01.001",
-    url = "http://www.sciencedirect.com/science/article/pii/S0003682X14000024",
-    author = "Ilyas Potamitis and Stavros Ntalampiras and Olaf Jahn and Klaus Riede",
-    keywords = "Birdsong detection, Bird recognition, Computational ecology",
-}
-@article{child-babble-corpus,
-    title = "Canonical babble development in a large-scale crosslinguistic corpus",
-    author = "Cychosz, M., Cristia, A., Bergelson, E., Casillas, M., Baudet, G., Warlaumont, A., Scaff, C., Yankowitz, L., Seidl, A.",
-    year = "2019",
-    doi = "https://doi.org/10.31234/osf.io/9vzs5",
-    url = "https://psyarxiv.com/9vzs5",
-}
-@misc{musan,
-      title={MUSAN: A Music, Speech, and Noise Corpus}, 
-      author={David Snyder and Guoguo Chen and Daniel Povey},
-      year={2015},
-      eprint={1510.08484},
-      archivePrefix={arXiv},
-      primaryClass={cs.SD}
-}
 @inproceedings{seshat,
   TITLE = {{Seshat: A tool for managing and verifying annotation campaigns of audio data}},
   AUTHOR = {Titeux, Hadrien and Riad, Rachid and Cao, Xuan-Nga and Hamilakis, Nicolas and Madden, Kris and Cristia, Alejandrina and Bachoud-L{\'e}vi, Anne-Catherine and Dupoux, Emmanuel},
@@ -39,7 +12,7 @@
   HAL_VERSION = {v1},
 }
 @article{gamma-paper,
-    title = "The Unified and Holistic Method Gamma (γ) for Inter-Annotator Agreement Measure and Alignment",
+    title = "The Unified and Holistic Method Gamma ($\gamma$) for Inter-Annotator Agreement Measure and Alignment",
     author = {Mathet, Yann  and
       Widl{\"o}cher, Antoine  and
       M{\'e}tivier, Jean-Philippe},
@@ -78,11 +51,6 @@
     year = "2000",
     doi = "10.1177/014272370002006006",
     URL = "https://talkbank.org/manuals/CHAT.pdf",
-}
-@InProceedings{ami-corpus,
-	author="I. McCowan, J. Carletta, W. Kraaij, S. Ashby, S. Bourban, M. Flynn, M. Guillemot, T. Hain, J. Kadlec, V. Karaiskos, M.Kronenthal, G. Lathoud, M. Lincoln, A. Lisowska, W. Post, D. Reidsma, and P. Wellner",
-	title="The AMI Meeting Corpus",
-	year="2005",
 }
 @inproceedings{numba-paper,
 	author = {Lam, Siu Kwan and Pitrou, Antoine and Seibert, Stanley},
@@ -124,6 +92,52 @@
   number={},
   pages={7124-7128},
   doi={10.1109/ICASSP40776.2020.9052974}
+}
+@Article{numpy-paper,
+ title         = {Array programming with {NumPy}},
+ author        = {Charles R. Harris and K. Jarrod Millman and St{'{e}}fan J.
+                 van der Walt and Ralf Gommers and Pauli Virtanen and David
+                 Cournapeau and Eric Wieser and Julian Taylor and Sebastian
+                 Berg and Nathaniel J. Smith and Robert Kern and Matti Picus
+                 and Stephan Hoyer and Marten H. van Kerkwijk and Matthew
+                 Brett and Allan Haldane and Jaime Fern{'{a}}ndez del
+                 R{'{\i}}o and Mark Wiebe and Pearu Peterson and Pierre
+                 G{'{e}}rard-Marchant and Kevin Sheppard and Tyler Reddy and
+                 Warren Weckesser and Hameer Abbasi and Christoph Gohlke and
+                 Travis E. Oliphant},
+ year          = {2020},
+ month         = sep,
+ journal       = {Nature},
+ volume        = {585},
+ number        = {7825},
+ pages         = {357--362},
+ doi           = {10.1038/s41586-020-2649-2},
+ publisher     = {Springer Science and Business Media {LLC}},
+ url           = {https://doi.org/10.1038/s41586-020-2649-2}
+}
+@article{kappa-paper,
+    title = "Assessing Agreement on Classification Tasks: The Kappa Statistic",
+    author = "Carletta, Jean",
+    journal = "Computational Linguistics",
+    volume = "22",
+    number = "2",
+    year = "1996",
+    url = "https://www.aclweb.org/anthology/J96-2004",
+    pages = "249--254",
+}
+
+@article{alpha-paper,
+    title = "Computing Krippendorff's Alpha-Reliability",
+    author = "Krippendorff, Klaus",
+    year = "2011",
+    url = "https://repository.upenn.edu/asc_papers/43/",
+}
+
+@article{inter-rater-handbook,
+    title = "Handbook of Inter-rater Reliability.",
+    author = "Gwet, Kilem Li.",
+    year = "2012",
+    pages = "6-7",
 }
 
 
