Added a small summary of how the gamma works. Added a study making use of the gamma. Added clarifications on the plots. #24

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -140,4 +140,22 @@
     pages = "6-7",
 }
 
+@inproceedings{gamma-usage,
+    title = "Fine-Grained Analysis of Propaganda in News Article",
+    author = "Da San Martino, Giovanni  and
+      Yu, Seunghak  and
+      Barr{\'o}n-Cede{\~n}o, Alberto  and
+      Petrov, Rostislav  and
+      Nakov, Preslav",
+    booktitle = "Proceedings of the 2019 Conference on Empirical Methods in Natural Language Processing and the 9th International Joint Conference on Natural Language Processing (EMNLP-IJCNLP)",
+    month = nov,
+    year = "2019",
+    address = "Hong Kong, China",
+    publisher = "Association for Computational Linguistics",
+    url = "https://www.aclweb.org/anthology/D19-1565",
+    doi = "10.18653/v1/D19-1565",
+    pages = "5636--5646",
+    abstract = "Propaganda aims at influencing people{'}s mindset with the purpose of advancing a specific agenda. Previous work has addressed propaganda detection at document level, typically labelling all articles from a propagandistic news outlet as propaganda. Such noisy gold labels inevitably affect the quality of any learning system trained on them. A further issue with most existing systems is the lack of explainability. To overcome these limitations, we propose a novel task: performing fine-grained analysis of texts by detecting all fragments that contain propaganda techniques as well as their type. In particular, we create a corpus of news articles manually annotated at fragment level with eighteen propaganda techniques and propose a suitable evaluation measure. We further design a novel multi-granularity neural network, and we show that it outperforms several strong BERT-based baselines.",
+}
+
 
