Doc and fixing Example.ipynb to close #32.

--- a/notebooks/Example.ipynb
+++ b/notebooks/Example.ipynb
@@ -148,7 +148,7 @@
     "a dissimilarity that measures both the temporal and categorical differences between\n",
     "annotated units (for two different annotators from the continuum).\n",
     "\n",
-    "We'll also ask for 30 random continuum to be sampled in the Gamma measure's\n",
+    "We'll also ask for 30 random continua to be sampled in the Gamma measure's\n",
     "chance estimation."
    ]
   },
@@ -170,9 +170,10 @@
     }
    ],
    "source": [
-    "from pygamma_agreement import CombinedCategoricalDissimilarity\n",
+    "from pygamma_agreement import CombinedCategoricalDissimilarity, CategoricalDissimilarity\n",
     "\n",
-    "dissimilarity = CombinedCategoricalDissimilarity(continuum.categories)\n",
+    "cat_dissim = CategoricalDissimilarity(continuum.categories, delta_empty=1)\n",
+    "dissimilarity = CombinedCategoricalDissimilarity(cat_dissim=cat_dissim)\n",
     "\n",
     "gamma_results = continuum.compute_gamma(dissimilarity,\n",
     "                                        n_samples=30)\n",
@@ -272,7 +273,8 @@
     "for file in files:\n",
     "    start_time = time()\n",
     "    continuum = Continuum.from_csv(file)\n",
-    "    dissimilarity = CombinedCategoricalDissimilarity(continuum.categories, alpha=3, beta=1, delta_empty=1.0)\n",
+    "    cat_dissim = CategoricalDissimilarity(continuum.categories, delta_empty=1)\n",
+    "    dissimilarity = CombinedCategoricalDissimilarity(alpha=3, beta=1, delta_empty=1.0, cat_dissim=cat_dissim)\n",
     "    gamma_results = continuum.compute_gamma(dissimilarity,\n",
     "                                            n_samples=30,\n",
     "                                            precision_level=0.01)\n",
